--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "icomefromthenet/ledger",
+    "name": "vladshut/ledger",
     "description": "Finance and Accounting Library",
     "license": "MIT",
     "authors": [
